--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,12 @@
 html {
   font-family: Lora, serif;
+  color: #fff;
 }
 
 .masthead {
-
+  background: url("../images/leaf-bg.svg") #588477;
+  border-top: solid 3px #2d5a4d;
+  border-bottom: solid 3px #2d5a4d;
 }
 
 .logo {
@@ -16,18 +19,30 @@ html {
 
 .nav a {
   text-decoration: none;
+  color: #fff;
+  border: solid 3px #2d5a4d;
+  border-radius: 8px;
+  background-color: #467366;
 }
 
 .nav a:hover {
-
+  color: #145b1d;
+  background: url("../images/leaf-icon.svg") no-repeat center center / 64px auto white;
 }
 
 .banner {
-
+  background-image: linear-gradient(to bottom, rgba(16, 52, 41, 0), rgba(16, 52, 41, .8)), url("../images/banner.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .banner-content {
-
+  padding-top: 20rem;
+  background-image: url("../images/two-leaves.svg");
+  background-size: 100px auto;
+  background-repeat: no-repeat;
+  background-position: left 12em;
 }
 
 @media only screen and (min-width: 60em) {
