--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ html {
 }
 
 .masthead {
-  background: url("../images/leaf-bg.svg") #588477;
+  background: url("../images/leaf-bg.svg") repeat center center / 64px auto #588477;
   border-top: solid 3px #2d5a4d;
   border-bottom: solid 3px #2d5a4d;
 }
@@ -27,22 +27,23 @@ html {
 
 .nav a:hover {
   color: #145b1d;
-  background: url("../images/leaf-icon.svg") no-repeat center center / 64px auto white;
+  background: url("../images/leaf-icon.svg") no-repeat left center / 64px auto white;
 }
 
 .banner {
-  background-image: linear-gradient(to bottom, rgba(16, 52, 41, 0), rgba(16, 52, 41, .8)), url("../images/banner.jpg");
-  background-position: center;
+  background-image: linear-gradient(to bottom, rgba(16, 52, 41, 0) 50%, rgba(16, 52, 41, .8)), url("../images/banner.jpg");
+  background-position: center bottom;
   background-size: cover;
   background-repeat: no-repeat;
+  border-bottom: solid 3px #2d5a4d;
 }
 
 .banner-content {
-  padding-top: 20rem;
   background-image: url("../images/two-leaves.svg");
   background-size: 100px auto;
   background-repeat: no-repeat;
-  background-position: left 12em;
+  background-position: 10px 180px;
+  padding-top: 300px;
 }
 
 @media only screen and (min-width: 60em) {
